<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment"
    android:paddingHorizontal="@dimen/min_margin"
    android:paddingVertical="@dimen/medium_margin"
    >

    <Button
        android:id="@+id/btn_keepSession_homeFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/keep_session_btn"
        />

    <Button
        android:id="@+id/btn_logout_homeFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_keepSession_homeFragment"
        android:text="@string/logout_btn"
        />

    <Button
        android:id="@+id/btn_defaultState_homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_btn"
        app:layout_constraintEnd_toStartOf="@id/btn_successState_homeFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_logout_homeFragment"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:paddingHorizontal="0dp"
        />
    <Button
        android:id="@+id/btn_successState_homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_defaultState_homeFragment"
        app:layout_constraintTop_toBottomOf="@id/btn_logout_homeFragment"
        app:layout_constraintEnd_toStartOf="@id/btn_failureState_homeFragment"
        android:text="@string/success_btn"
        android:paddingHorizontal="0dp"
        />
    <Button
        android:id="@+id/btn_failureState_homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_successState_homeFragment"
        app:layout_constraintTop_toBottomOf="@id/btn_logout_homeFragment"
        app:layout_constraintEnd_toStartOf="@id/btn_emptyState_homeFragment"
        android:text="@string/failure_btn"
        android:paddingHorizontal="0dp"
        />
    <Button
        android:id="@+id/btn_emptyState_homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_failureState_homeFragment"
        app:layout_constraintTop_toBottomOf="@id/btn_logout_homeFragment"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/empty_btn"
        android:paddingHorizontal="0dp"
        />
    <ImageView
        android:id="@+id/icon_stateIcon_homeFragment"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_defaultState_homeFragment"
        app:layout_constraintBottom_toTopOf="@id/txt_stateMessage_homeFragment"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@drawable/ic_default"
        />
    <TextView
        android:id="@+id/txt_stateMessage_homeFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_stateIcon_homeFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/test_state_message"
        android:textAlignment="center"
        />
    <ProgressBar
        android:id="@+id/progressBar_homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_defaultState_homeFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>